@@ -9,6 +9,10 @@ What's New in Stackless 3.X.X?
 
 *Release date: 20XX-XX-XX*
 
+- https://bitbucket.org/stackless-dev/stackless/issues/98
+  Prevent an unlikely NULL-pointer access in safe_pickle.c pickle_callback().
+  The bug is very old and might affect multiprocessing.
+
 - https://bitbucket.org/stackless-dev/stackless/issues/96
   Impose a very high limit on the recursion depth of cPickle.
   Previously an infinite recursion could eat up all you memory
